Page cache
in memory page cache, you might also like, better OOTB